--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,9 @@ body {
 }
 
 .flashcard {
-    width: 300px;
-    height: 200px;
+    width: 600px;
+    height: 400px;
+    font-size: 1.5rem;
     border: 2px solid #333;
     border-radius: 10px;
     background-color: #fff;
@@ -37,7 +38,7 @@ body {
 }
 
 #card-content {
-    font-size: 1.2em;
+    font-size: 2.0em;
     padding: 20px;
 }
 
